crates/specforge-cli/tests/snapshots/tests__read_views__review_fx1_human.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized_text(&run.stdout, root)"
---
Review of the whole project
Payload  type  covered  1/1 proven
login  behavior  covered  1/1 proven
logout  behavior  uncovered  0/0 proven
reset_password  behavior  uncovered  0/1 proven
Findings:
info  Payload  Entity 'Payload' is unconnected: no edge links it to another entity
warning  logout  Entity 'logout' has no verify declarations
info  logout  Entity 'logout' is unconnected: no edge links it to another entity
info  reset_password  Entity 'reset_password' is unconnected: no edge links it to another entity
