crates/specforge-cli/tests/snapshots/tests__read_views__schema_rv1_cli_kind_behavior.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&schema_digest(value), root)"
---
{
  "fields": [
    "category",
    "consumes",
    "contract",
    "description",
    "diagnostic",
    "features",
    "invariants",
    "ports",
    "produces",
    "refs",
    "severity",
    "status",
    "types"
  ],
  "name": "behavior",
  "testable": true
}
