crates/specforge-cli/tests/snapshots/tests__read_views__schema_rv1_cli_kind_nosuch.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "format!(\"exit: {:?}\\nstderr:\\n{}\", nosuch.code, nosuch.stderr)"
---
exit: Some(1)
stderr:
error[unknown_kind]: unknown entity kind 'nosuch'
