crates/specforge-cli/tests/snapshots/tests__read_views__schema_rv1_cli_publish_context.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&schema_digest(value), root)"
---
{
  "$id": "https://specforge.dev/schema/graph-protocol-v1.0.0.json",
  "properties": [
    "edges",
    "format_version",
    "nodes",
    "schema",
    "schema_ref",
    "schema_version",
    "token_budget"
  ],
  "required": [
    "format_version",
    "schema_version",
    "nodes",
    "edges"
  ],
  "title": "SpecForge Graph Protocol"
}
