crates/specforge-cli/tests/snapshots/tests__read_views__schema_rv1_cli_publish_kind_behavior.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "format!(\"exit: {:?}\\nstderr:\\n{}\", refused.code,\nnormalized_text(&refused.stderr, root))"
---
exit: Some(2)
stderr:
error: the argument '--publish' cannot be used with '--kind <KIND>'

Usage: specforge schema --publish <PATH>

For more information, try '--help'.
