crates/specforge-cli/tests/snapshots/tests__read_views__schema_rv1_mcp_kind_nosuch.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&schema_digest(value), root)"
---
{
  "edge_types": [
    "ExternalRef",
    "References"
  ],
  "entity_kinds": [],
  "extensions": [
    {
      "name": "@specforge/software",
      "version": "1.0.0"
    },
    {
      "name": "@specforge/testing",
      "version": "1.0.0"
    }
  ],
  "schema_version": {
    "major": 1,
    "minor": 0,
    "patch": 0
  }
}
