crates/specforge-cli/tests/snapshots/tests__read_views__stats_fx1_mcp.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(mcp, root)"
---
{
  "declared_pct": 75.0,
  "diagnostic_summary": {
    "errors": 0,
    "infos": 3,
    "warnings": 9
  },
  "edge_count": 1,
  "entity_counts": [
    {
      "count": 3,
      "kind": "behavior"
    },
    {
      "count": 1,
      "kind": "feature"
    },
    {
      "count": 1,
      "kind": "property"
    },
    {
      "count": 2,
      "kind": "type"
    }
  ],
  "proof_pct": 50.0,
  "unconnected_count": 5
}
